Fixed a z-index issue with the redactor toolbar and redactor modal

--- a/assets/admin/css/redactor.css
+++ b/assets/admin/css/redactor.css
@@ -70,6 +70,9 @@
 .redactor_dropdown {
   z-index: 100 !important;
 }
+#redactor_modal {
+  z-index: 10006 !important;
+}
 /*
 	AIR
 
